Obtendo feeds e enfileirando no RabbitMq

--- a/RssReaderContainer/RssReaderContainer.csproj
+++ b/RssReaderContainer/RssReaderContainer.csproj
@@ -15,5 +15,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RssReader\RssReader.csproj" />
+    <ProjectReference Include="..\RabbitMQManager\RabbitMQManager.csproj" />
   </ItemGroup>
 </Project>
