--- a/RssReaderContainer/Dockerfile
+++ b/RssReaderContainer/Dockerfile
@@ -1,19 +1,23 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/runtime:7.0 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+# Creates a non-root user with an explicit UID and adds permission to access the /app folder
+# For more info, please refer to https://aka.ms/vscode-docker-dotnet-configure-containers
+RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
+USER appuser
+
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+ARG configuration=Release
 WORKDIR /src
 COPY ["RssReaderContainer/RssReaderContainer.csproj", "RssReaderContainer/"]
-COPY ["RssReader/RssReader.csproj", "RssReader/"]
 RUN dotnet restore "RssReaderContainer/RssReaderContainer.csproj"
 COPY . .
 WORKDIR "/src/RssReaderContainer"
-RUN dotnet build "RssReaderContainer.csproj" -c Release -o /app/build
+RUN dotnet build "RssReaderContainer.csproj" -c $configuration -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "RssReaderContainer.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG configuration=Release
+RUN dotnet publish "RssReaderContainer.csproj" -c $configuration -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
