Ajustes no container de leitura de RSS

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.4'
 
 services:
@@ -7,3 +6,11 @@ services:
     build:
       context: .
       dockerfile: RssReaderContainer/Dockerfile
+
+  my-rabbit:
+    image: rabbitmq:3-management
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    container_name: my-rabbit
+    restart: always  # Isso faz com que o contêiner do RabbitMQ reinicie sempre que ele falhar ou for desligado
