--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,7 +1,19 @@
-
-version: '3.4'
+version: '3.7'
 
 services:
+  my-rabbit:
+    image: rabbitmq:3-management
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    container_name: my-rabbit
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "rabbitmqctl status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   rssreadercontainer:
     image: rssreadercontainer
     build:
@@ -9,5 +21,19 @@ services:
       dockerfile: RssReaderContainer/Dockerfile
       args:
         - configuration=Debug
+    depends_on:
+      my-rabbit:
+        condition: service_healthy
+
+  rssqueueconsumer:
+    image: rssqueueconsumer
+    build:
+      context: .
+      dockerfile: RssQueueConsumer/Dockerfile
+      args:
+        - configuration=Debug
+    depends_on:
+      my-rabbit:
+        condition: service_healthy
     volumes:
       - ~/.vsdbg:/remote_debugger:rw
