--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -14,6 +14,18 @@ services:
       timeout: 10s
       retries: 5
 
+  mongo:
+    image: mongo
+    container_name: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=123456
+    ports:
+      - "27017:27017"
+    depends_on:
+      my-rabbit:
+        condition: service_healthy    
+
   rssreadercontainer:
     image: rssreadercontainer
     build:
