--- a/ApiSample.Application/ApiSample.Application.csproj
+++ b/ApiSample.Application/ApiSample.Application.csproj
@@ -11,7 +11,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="MongoDB.Driver" Version="2.27.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ApiSample.Domain\ApiSample.Domain.csproj" />
+    <ProjectReference Include="..\ApiSample.Infraestrutura\ApiSample.Infraestrutura.csproj" />
   </ItemGroup>
 
 </Project>
