--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,6 +43,4 @@ jobs:
         context: ./RssQueueConsumer
         file: ./RssQueueConsumer/Dockerfile
         push: true
-        tags: |
-          dududeveloper/RssConsumer/v${{gitrub.run_number}}
-          dududeveloper/RssConsumer/latest
+        tags: dududeveloper/RssConsumer/v${{gitrub.run_number}}
