--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,4 +43,6 @@ jobs:
         context: ./RssQueueConsumer
         file: ./RssQueueConsumer/Dockerfile
         push: true
-        tags: dududeveloper/RssConsumer/v${{gitrub.run_number}}
+        tags: | 
+          dududeveloper/RssConsumer/v${{github.run_number}}
+          dududeveloper/RssConsumer/latest
