--- a/RssQueueConsumer/Dockerfile
+++ b/RssQueueConsumer/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["RssQueueConsumer/RssQueueConsumer.csproj", "RssQueueConsumer/"]
+COPY ["RssQueueConsumer.csproj", "RssQueueConsumer/"]
 RUN dotnet restore "RssQueueConsumer/RssQueueConsumer.csproj"
 COPY . .
 WORKDIR "/src/RssQueueConsumer"
