--- a/RssQueueConsumer/Dockerfile
+++ b/RssQueueConsumer/Dockerfile
@@ -1,20 +1,22 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-FROM mcr.microsoft.com/dotnet/runtime:7.0 AS base
-WORKDIR /app
-
+# Stage 1: Build
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["RssQueueConsumer.csproj", "RssQueueConsumer/"]
+
+# Copy the entire project and restore dependencies
+COPY ["RssQueueConsumer/RssQueueConsumer.csproj", "RssQueueConsumer/"]
 RUN dotnet restore "RssQueueConsumer/RssQueueConsumer.csproj"
-COPY . .
+
+# Copy the remaining files and build the project
+COPY ./RssQueueConsumer ./RssQueueConsumer
 WORKDIR "/src/RssQueueConsumer"
-RUN dotnet build "RssQueueConsumer/RssQueueConsumer.csproj" -c Release -o /app/build
+RUN dotnet build -c Release -o /app/build
 
+# Stage 2: Publish
 FROM build AS publish
-RUN dotnet publish "/RssQueueConsumer/RssQueueConsumer.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish -c Release -o /app/publish /p:UseAppHost=false
 
-FROM base AS final
+# Stage 3: Runtime
+FROM mcr.microsoft.com/dotnet/runtime:7.0 AS base
 WORKDIR /app
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "RssQueueConsumer.dll"]
