--- a/RssQueueConsumer/Dockerfile
+++ b/RssQueueConsumer/Dockerfile
@@ -13,10 +13,10 @@ COPY ["RssQueueConsumer/RssQueueConsumer.csproj", "RssQueueConsumer/"]
 COPY ["ApiSample.Domain/ApiSample.Domain.csproj", "ApiSample.Domain/"]
 COPY ["ApiSample.Infraestrutura/ApiSample.Infraestrutura.csproj", "ApiSample.Infraestrutura/"]
 RUN dotnet restore "./RssQueueConsumer/RssQueueConsumer.csproj"
-#COPY ["RabbitMQManager/RabbitMQManager.csproj", "RabbitMQManager/"]
 COPY . .
 WORKDIR "/src/RssQueueConsumer"
 RUN dotnet build "./RssQueueConsumer.csproj" -c $BUILD_CONFIGURATION -o /app/build
+COPY ["RabbitMQManager/RabbitMQManager.csproj", "RabbitMQManager/"]
 
 # Esta fase é usada para publicar o projeto de serviço a ser copiado para a fase final
 FROM build AS publish
