--- a/RssReaderContainer/Dockerfile
+++ b/RssReaderContainer/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["RssReaderContainer/RssReaderContainer.csproj", "RssReaderContainer/"]
+COPY ["./RssReaderContainer/RssReaderContainer.csproj", "RssReaderContainer/"]
 RUN dotnet restore "./RssReaderContainer/RssReaderContainer.csproj"
 COPY . .
 WORKDIR "/src/RssReaderContainer"
