--- a/RssReaderContainer/Dockerfile
+++ b/RssReaderContainer/Dockerfile
@@ -12,8 +12,8 @@ WORKDIR /src
 COPY ["RssReaderContainer.csproj", "RssReaderContainer/"]
 RUN dotnet restore "./RssReaderContainer/RssReaderContainer.csproj"
 COPY . .
-WORKDIR "/src/RssReaderContainer"
-RUN dotnet build "RssReaderContainer.csproj" -c $BUILD_CONFIGURATION -o /app/build
+#WORKDIR "/src/RssReaderContainer"
+RUN dotnet build "./RssReaderContainer/RssReaderContainer.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Esta fase é usada para publicar o projeto de serviço a ser copiado para a fase final
 FROM build AS publish
