--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v6
       with:
-        context: ./RssReaderContainer
+        context: .
         file: ./RssReaderContainer/Dockerfile
         push: true
         tags: | 
