--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,6 +44,4 @@ jobs:
         context: .
         file: ./RssReaderContainer/Dockerfile
         push: true
-        tags: | 
-          dududeveloper/rss-reader-container/v${{github.run_number}}
-          dududeveloper/rss-reader-container/latest
+        tags: dududeveloper/rss-reader-container/latest
