--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,4 +44,6 @@ jobs:
         context: .
         file: ./RssReaderContainer/Dockerfile
         push: true
-        tags: dududeveloper/rss-reader-container:latest
+        tags: | 
+          dududeveloper/rss-reader-container:latest
+          dududeveloper/rss-reader-container:v${{github.run_number}}
