--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,11 +1,6 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: Tests
-
+name: CI
+run-name: Executado por ${{ github.actor}} em ${{ github.run_started_at }}
 on:
-  push:
-    branches: [ "main" ]
   workflow_dispatch:
   pull_request:
     branches: [ "main" ]
