Criando teste de integração com RabbitMQ

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ApiSample.Application\ApiSample.Application.csproj" />
+    <ProjectReference Include="..\RabbitMQManager\RabbitMQManager.csproj" />
   </ItemGroup>
 
 </Project>
