--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,7 +9,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    services:
+      rabbitmq:
+        image: rabbitmq:3-management
+        ports:
+          - 15672:15672
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
