--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -50,7 +50,11 @@ jobs:
         tags: | 
           dududeveloper/rss-reader-container:latest
           dududeveloper/rss-reader-container:v${{github.run_number}}
-
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{secrets.DOCKERHUB_USERNAME}}
+        password: ${{secrets.DOCKERHUB_PASSWORD}}
     - name: Build and push Rss Consumer
       uses: docker/build-push-action@v6
       with:
